<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_amt">Enter amount</string>
    <string name="tipBtn_label_10">10%</string>
    <string name="tipBtn_label_15">15%</string>
    <string name="tipBtn_label_20">20%</string>
    <string name="totalTip_text">Tip is:</string>
    <string name="totalTip_value">$00.00</string>
    <string name="customTip_text">Other:</string>
    <string name="btnCustomTip">Enter</string>
    <string name="customTip_value">0%</string>

</resources>
