<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalcActivity" >

    <EditText
        android:id="@+id/etNewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_amt" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etFinalTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignRight="@+id/btnTipCustom"
        android:layout_toRightOf="@+id/btnTip20"
        android:ems="10"
        android:hint="@string/totalTip_value"
        android:inputType="none" />

    <Button
        android:id="@+id/btnTip15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnTip20"
        android:layout_alignRight="@+id/etNewAmount"
        android:onClick="onCalcTip_15"
        android:text="@string/tipBtn_label_15" />

    <Button
        android:id="@+id/btnTip10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etNewAmount"
        android:layout_below="@+id/etNewAmount"
        android:layout_marginTop="46dp"
        android:onClick="onCalcTip_10"
        android:text="@string/tipBtn_label_10" />

    <EditText
        android:id="@+id/etCustomTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/etFinalTipValue"
        android:layout_toLeftOf="@+id/btnTipCustom"
        android:ems="10"
        android:hint="@string/customTip_value"
        android:inputType="none" />

    <Button
        android:id="@+id/btnTipCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etCustomTipValue"
        android:layout_alignLeft="@+id/btnTip15"
        android:onClick="onCalcTip_custom"
        android:text="@string/btnCustomTip" />

    <Button
        android:id="@+id/btnTip20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTip10"
        android:layout_below="@+id/btnTip10"
        android:layout_marginTop="26dp"
        android:onClick="onCalcTip_20"
        android:text="@string/tipBtn_label_20" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="52dp"
        android:hint="@string/totalTip_text"
        android:text="@string/totalTip_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnTip20"
        android:layout_below="@+id/btnTip20"
        android:layout_marginTop="26dp"
        android:hint="@string/totalTip_text"
        android:text="@string/customTip_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
